<resources>
    <string name="app_name">Toko Stiker</string>
    <string name="login">login</string>
    <string name="textUcapan">Selamat Datang ditoko Kami</string>
    <string name="textKoleksi">Koleksi Stiker</string>
    <string name="imgGambardua">Gambar Dua</string>
    <string name="imgGambartiga">Gambar Tiga</string>
    <string name="imgGambarempat">Gambar Empat</string>
    <string name="textRplimaribu">Rp 5000</string>
    <string name="textRpenamribu">Rp 6000</string>
    <string name="textRplima">Rp 5000</string>
    <string name="textRptujuhribu">Rp 7000</string>
    <string name="imgGambarview">Gambar View</string>
    <string name="imgAnime">Gambar Anime</string>
    <string name="gambarPenjualan">Gambar Penjualan</string>
    <string name="textRplimabelas">Rp 15000</string>
    <string name="textRpsepuluh">Rp 10000</string>
    <string name="textKembali">Kembali</string>
    <string name="textSelanjutnya">Selanjutnya</string>
    <string name="textPesansekarang">Pesan Sekarang</string>
    <string name="btnDaftar">daftar</string>
    <string name="textAccount">don_t_have_an_account</string>
    <string name="imgLogoawal">logo_awal</string>
    <string name="textNamapengguna">Masukkan Nama Pengguna</string>
    <string name="textMaskpassword">Masukkan Password</string>
    <string name="textakun">Belum ada Akun</string>
    <string name="textLogin">Masuk</string>
    <string name="textG1">G_01 Rp 5000</string>
    <string name="textG2">G_02 Rp 5000</string>
    <string name="textG3">G_03 Rp 6000</string>
    <string name="textB1">Beli</string>
    <string name="textB2">Beli</string>
    <string name="textB3">Beli</string>
    <string name="textB5">Beli</string>
    <string name="textB4">Beli</string>
    <string name="textB6">Beli</string>
    <string name="textminta">Permintaan Pesanan</string>
    <string name="textG6">G_06 Rp 7000</string>
    <string name="textG5">G_05 Rp 5000</string>
    <string name="textG4">G_04 7000</string>
    <string name="textG7">G_04 Rp 7000</string>
    <string name="btpesan">Permintaan Pesanan</string>
    <string name="btninst">Instagram</string>
    <string name="textprof">Profil</string>
    <string name="textDev">Tentang Developer</string>
    <string name="textbrnda">Beranda</string>
    <string name="textpesn">Pesan</string>
    <string name="textlogout">Logout</string>
    <string name="txnama">Nama : Galuh Saputri</string>
    <string name="txprod">Prodi : RPLA</string>
    <string name="textkerja">Pekerjaan : Web Developer</string>
    <string name="imgGaluh">TODO</string>
    <string name="txdevelop">Developer</string>
    <string name="txdvlp">Developer</string>
</resources>